<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignUpActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/programmin_icon"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_book_from_programming_lk"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RelativeLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_rectaingle_top_rounded"
        android:backgroundTint="#273271"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_passwotd"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_userName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:layout_marginTop="15dp"
            android:layout_below="@+id/et_userName"
            android:paddingLeft="10dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_passwotd"
            android:layout_alignStart="@+id/tv_passwotd"
            android:layout_alignEnd="@+id/et_password"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignStart="@+id/tv_passwotd"
            android:layout_alignEnd="@+id/et_password"
            android:layout_marginStart="1dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_signup"
            android:layout_alignTop="@+id/btn_signup"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-35dp"
            android:text="@string/signup_here" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signup_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/custom_rectaingle_top_rounded"
        android:backgroundTint="#273271"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/cardview_default_radius"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >

        <TextView
            android:id="@+id/tv_userName1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_userName1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_passwotd1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_userName1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_confirmpasswotd1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_passwotd1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/et_userName1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_confirmpassword1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/et_password1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_passwotd1"
            android:layout_alignStart="@+id/tv_passwotd1"
            android:layout_alignEnd="@+id/et_password1"
            android:layout_marginStart="0dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_rectaingle_all_rounded"
            android:text="@string/signup_login" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>